--- a/SCION_RENDERING/SCION_RENDERING.vcxproj
+++ b/SCION_RENDERING/SCION_RENDERING.vcxproj
@@ -146,12 +146,15 @@
     </ProjectReference>
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="Rendering\Core\Camera2D.h" />
     <ClInclude Include="Rendering\Essentials\Shader.h" />
     <ClInclude Include="Rendering\Essentials\ShaderLoader.h" />
     <ClInclude Include="Rendering\Essentials\Texture.h" />
     <ClInclude Include="Rendering\Essentials\TextureLoader.h" />
+    <ClInclude Include="Rendering\Essentials\Vertex.h" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="Rendering\Core\Camera2D.cpp" />
     <ClCompile Include="Rendering\Essentials\Shader.cpp" />
     <ClCompile Include="Rendering\Essentials\ShaderLoader.cpp" />
     <ClCompile Include="Rendering\Essentials\Texture.cpp" />
