Finished entt::meta and sol2 bindings
More bindings may be added in the future; however, this is good for now.

--- a/SCION_CORE/SCION_CORE.vcxproj.filters
+++ b/SCION_CORE/SCION_CORE.vcxproj.filters
@@ -76,5 +76,8 @@
     <None Include="Core\ECS\Entity.inl">
       <Filter>Header Files</Filter>
     </None>
+    <None Include="Core\ECS\Registry.inl">
+      <Filter>Header Files</Filter>
+    </None>
   </ItemGroup>
 </Project>
