--- a/SCION_CORE/SCION_CORE.vcxproj
+++ b/SCION_CORE/SCION_CORE.vcxproj
@@ -180,6 +180,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="Core\ECS\Entity.inl" />
+    <None Include="Core\ECS\Registry.inl" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
